# RayTracer

./: CMakeLists.txt  LICENSE  LICENSE.txt  README.md
Sources/: main.cpp
Sources/Include/container/: matrix.hpp
Sources/Include/raytracer/: output.hpp  raytracer.hpp  value_mapping.hpp
Sources/Include/raytracer/geometry/: spatial_vector.hpp
Sources/Include/raytracer/geometry/object/: object.hpp  sphere.hpp
Sources/Include/utility/: netpbm.hpp  timer.hpp
Sources/Includes/containers/: matrix.hpp
Sources/Includes/image/: image.hpp
Sources/Includes/raytracer/: alias.hpp  output.hpp  raytracer.hpp  value_mapping.hpp
Sources/Includes/raytracer/geometry/: cube.hpp  ray.hpp  spatial_vector.hpp  sphere.hpp
Sources/Includes/utilities/: netpbm.hpp  netpbm_writer.hpp  timer.hpp
resource/scene/: scene.json
source/: main.cpp
source/include/concurrency/: concurrency.hpp
source/include/container/: matrix.hpp
source/include/image/: image.hpp
source/raytracer/implementation/: output.cpp  raytracer.cpp  scene.cpp  value_map.cpp  value_mapping.cpp
source/raytracer/implementation/geometry/object/: cube.cpp  sphere.cpp  triangle.cpp
source/raytracer/include/raytracer/: alias.hpp  element.hpp  elements.hpp  metadata.hpp  output.hpp  raytracer.hpp  scene.hpp  value_map.hpp  value_mapping.hpp
source/raytracer/include/raytracer/geometry/: point.hpp  ray.hpp  spatial_vector.hpp
source/raytracer/include/raytracer/geometry/object/: cube.hpp  object.hpp  sphere.hpp  triangle.hpp
source/raytracer/tests/: raytracer_tests.cpp
source/utility/implementation/: netpbm.cpp
source/utility/include/utility/: netpbm.hpp  timer.hpp
